add read function which get image ndarray

--- a/insta360_sdk_python/insta360_sdk_python.vcxproj.filters
+++ b/insta360_sdk_python/insta360_sdk_python.vcxproj.filters
@@ -24,4 +24,7 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
 </Project>
