--- a/insta360_sdk_python/insta360_sdk_python.vcxproj
+++ b/insta360_sdk_python/insta360_sdk_python.vcxproj
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\OpenCV.2.4.11\build\native\OpenCV.props" Condition="Exists('..\packages\OpenCV.2.4.11\build\native\OpenCV.props')" />
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
       <Configuration>Debug</Configuration>
@@ -80,20 +81,16 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
     <ExecutablePath>C:\Users\asika\Downloads\WindowsSDK20211223\WindowsSDK20211223\CameraSDKWindows\bin;$(ExecutablePath)</ExecutablePath>
-    <IncludePath>C:\Users\asika\AppData\Local\Programs\Python\Python38\include;C:\Users\asika\Downloads\WindowsSDK20211223\WindowsSDK20211223\CameraSDKWindows\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\asika\AppData\Local\Programs\Python\Python38\libs;C:\Users\asika\Downloads\WindowsSDK20211223\WindowsSDK20211223\CameraSDKWindows\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\asika\AppData\Local\Programs\Python\Python38\include;C:\Users\asika\Downloads\WindowsSDK20211223\WindowsSDK20211223\CameraSDKWindows\include;C:\Users\asika\Downloads\ffmpeg-n5.0-latest-win64-lgpl-shared-5.0\ffmpeg-n5.0-latest-win64-lgpl-shared-5.0\include;C:\Users\asika\Downloads\ffmpeg-n5.0-latest-win64-lgpl-shared-5.0\ffmpeg-n5.0-latest-win64-lgpl-shared-5.0\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\asika\Downloads\ffmpeg-n5.0-latest-win64-lgpl-shared-5.0\ffmpeg-n5.0-latest-win64-lgpl-shared-5.0\lib;C:\Users\asika\AppData\Local\Programs\Python\Python38\libs;C:\Users\asika\Downloads\WindowsSDK20211223\WindowsSDK20211223\CameraSDKWindows\lib;$(LibraryPath)</LibraryPath>
     <TargetExt>.pyd</TargetExt>
-    <CopyCppRuntimeToOutputDir>true</CopyCppRuntimeToOutputDir>
-    <CopyLocalProjectReference>true</CopyLocalProjectReference>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
     <ExecutablePath>C:\Users\asika\Downloads\WindowsSDK20211223\WindowsSDK20211223\CameraSDKWindows\bin;$(ExecutablePath)</ExecutablePath>
-    <IncludePath>C:\Users\asika\AppData\Local\Programs\Python\Python38\include;C:\Users\asika\Downloads\WindowsSDK20211223\WindowsSDK20211223\CameraSDKWindows\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\asika\AppData\Local\Programs\Python\Python38\libs;C:\Users\asika\Downloads\WindowsSDK20211223\WindowsSDK20211223\CameraSDKWindows\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\asika\AppData\Local\Programs\Python\Python38\include;C:\Users\asika\Downloads\WindowsSDK20211223\WindowsSDK20211223\CameraSDKWindows\include;C:\Users\asika\Downloads\ffmpeg-n5.0-latest-win64-lgpl-shared-5.0\ffmpeg-n5.0-latest-win64-lgpl-shared-5.0\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\asika\Downloads\ffmpeg-n5.0-latest-win64-lgpl-shared-5.0\ffmpeg-n5.0-latest-win64-lgpl-shared-5.0\lib;C:\Users\asika\AppData\Local\Programs\Python\Python38\libs;C:\Users\asika\Downloads\WindowsSDK20211223\WindowsSDK20211223\CameraSDKWindows\lib;$(LibraryPath)</LibraryPath>
     <TargetExt>.pyd</TargetExt>
-    <CopyCppRuntimeToOutputDir>true</CopyCppRuntimeToOutputDir>
-    <CopyLocalProjectReference>true</CopyLocalProjectReference>
   </PropertyGroup>
   <PropertyGroup Label="Vcpkg">
     <VcpkgEnabled>false</VcpkgEnabled>
@@ -148,7 +145,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>CameraSDK.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>CameraSDK.lib;avcodec.lib;avdevice.lib;avfilter.lib;avformat.lib;avutil.lib;swresample.lib;swscale.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -168,7 +165,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>CameraSDK.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>CameraSDK.lib;avcodec.lib;avdevice.lib;avfilter.lib;avformat.lib;avutil.lib;swresample.lib;swscale.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -177,6 +174,22 @@
   <ItemGroup>
     <ClInclude Include="main.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
-  <ImportGroup Label="ExtensionTargets" />
+  <ImportGroup Label="ExtensionTargets">
+    <Import Project="..\packages\boost.1.74.0.0\build\boost.targets" Condition="Exists('..\packages\boost.1.74.0.0\build\boost.targets')" />
+    <Import Project="..\packages\boost_python38-vc142.1.74.0.0\build\boost_python38-vc142.targets" Condition="Exists('..\packages\boost_python38-vc142.1.74.0.0\build\boost_python38-vc142.targets')" />
+    <Import Project="..\packages\OpenCV.2.4.11\build\native\OpenCV.targets" Condition="Exists('..\packages\OpenCV.2.4.11\build\native\OpenCV.targets')" />
+  </ImportGroup>
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>このプロジェクトは、このコンピューター上にない NuGet パッケージを参照しています。それらのパッケージをダウンロードするには、[NuGet パッケージの復元] を使用します。詳細については、http://go.microsoft.com/fwlink/?LinkID=322105 を参照してください。見つからないファイルは {0} です。</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\boost.1.74.0.0\build\boost.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\boost.1.74.0.0\build\boost.targets'))" />
+    <Error Condition="!Exists('..\packages\boost_python38-vc142.1.74.0.0\build\boost_python38-vc142.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\boost_python38-vc142.1.74.0.0\build\boost_python38-vc142.targets'))" />
+    <Error Condition="!Exists('..\packages\OpenCV.2.4.11\build\native\OpenCV.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\OpenCV.2.4.11\build\native\OpenCV.props'))" />
+    <Error Condition="!Exists('..\packages\OpenCV.2.4.11\build\native\OpenCV.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\OpenCV.2.4.11\build\native\OpenCV.targets'))" />
+  </Target>
 </Project>
