fix memory leak

--- a/insta360_sdk_python/insta360_sdk_python.vcxproj
+++ b/insta360_sdk_python/insta360_sdk_python.vcxproj
@@ -6,6 +6,14 @@
       <Configuration>Debug</Configuration>
       <Platform>Win32</Platform>
     </ProjectConfiguration>
+    <ProjectConfiguration Include="Release_pyd|Win32">
+      <Configuration>Release_pyd</Configuration>
+      <Platform>Win32</Platform>
+    </ProjectConfiguration>
+    <ProjectConfiguration Include="Release_pyd|x64">
+      <Configuration>Release_pyd</Configuration>
+      <Platform>x64</Platform>
+    </ProjectConfiguration>
     <ProjectConfiguration Include="Release|Win32">
       <Configuration>Release</Configuration>
       <Platform>Win32</Platform>
@@ -41,14 +49,28 @@
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release_pyd|Win32'" Label="Configuration">
+    <ConfigurationType>Application</ConfigurationType>
+    <UseDebugLibraries>false</UseDebugLibraries>
+    <PlatformToolset>v142</PlatformToolset>
+    <WholeProgramOptimization>true</WholeProgramOptimization>
+    <CharacterSet>Unicode</CharacterSet>
+  </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
-    <ConfigurationType>DynamicLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
-    <ConfigurationType>DynamicLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
+    <UseDebugLibraries>false</UseDebugLibraries>
+    <PlatformToolset>v142</PlatformToolset>
+    <WholeProgramOptimization>true</WholeProgramOptimization>
+    <CharacterSet>Unicode</CharacterSet>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release_pyd|x64'" Label="Configuration">
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
@@ -65,10 +87,16 @@
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
+  <ImportGroup Condition="'$(Configuration)|$(Platform)'=='Release_pyd|Win32'" Label="PropertySheets">
+    <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
+  </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
+  </ImportGroup>
+  <ImportGroup Condition="'$(Configuration)|$(Platform)'=='Release_pyd|x64'" Label="PropertySheets">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
@@ -78,19 +106,29 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release_pyd|Win32'">
+    <LinkIncremental>false</LinkIncremental>
+  </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
     <ExecutablePath>C:\Users\asika\Downloads\WindowsSDK20211223\WindowsSDK20211223\CameraSDKWindows\bin;$(ExecutablePath)</ExecutablePath>
-    <IncludePath>C:\Users\asika\AppData\Local\Programs\Python\Python38\include;C:\Users\asika\Downloads\WindowsSDK20211223\WindowsSDK20211223\CameraSDKWindows\include;C:\Users\asika\Downloads\ffmpeg-n5.0-latest-win64-lgpl-shared-5.0\ffmpeg-n5.0-latest-win64-lgpl-shared-5.0\include;C:\Users\asika\Downloads\ffmpeg-n5.0-latest-win64-lgpl-shared-5.0\ffmpeg-n5.0-latest-win64-lgpl-shared-5.0\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\asika\Downloads\ffmpeg-n5.0-latest-win64-lgpl-shared-5.0\ffmpeg-n5.0-latest-win64-lgpl-shared-5.0\lib;C:\Users\asika\AppData\Local\Programs\Python\Python38\libs;C:\Users\asika\Downloads\WindowsSDK20211223\WindowsSDK20211223\CameraSDKWindows\lib;$(LibraryPath)</LibraryPath>
-    <TargetExt>.pyd</TargetExt>
+    <IncludePath>C:\Users\asika\Downloads\WindowsSDK20211223\WindowsSDK20211223\MediaSDK20211223%28windows%29\MediaSDK\include;C:\Users\asika\AppData\Local\Programs\Python\Python38\include;C:\Users\asika\Downloads\WindowsSDK20211223\WindowsSDK20211223\CameraSDKWindows\include;C:\Users\asika\Downloads\ffmpeg-n5.0-latest-win64-lgpl-shared-5.0\ffmpeg-n5.0-latest-win64-lgpl-shared-5.0\include;C:\Users\asika\Downloads\ffmpeg-n5.0-latest-win64-lgpl-shared-5.0\ffmpeg-n5.0-latest-win64-lgpl-shared-5.0\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\asika\Downloads\WindowsSDK20211223\WindowsSDK20211223\MediaSDK20211223%28windows%29\MediaSDK\lib;C:\Users\asika\Downloads\ffmpeg-n5.0-latest-win64-lgpl-shared-5.0\ffmpeg-n5.0-latest-win64-lgpl-shared-5.0\lib;C:\Users\asika\AppData\Local\Programs\Python\Python38\libs;C:\Users\asika\Downloads\WindowsSDK20211223\WindowsSDK20211223\CameraSDKWindows\lib;$(LibraryPath)</LibraryPath>
+    <TargetExt>.exe</TargetExt>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
     <ExecutablePath>C:\Users\asika\Downloads\WindowsSDK20211223\WindowsSDK20211223\CameraSDKWindows\bin;$(ExecutablePath)</ExecutablePath>
-    <IncludePath>C:\Users\asika\AppData\Local\Programs\Python\Python38\include;C:\Users\asika\Downloads\WindowsSDK20211223\WindowsSDK20211223\CameraSDKWindows\include;C:\Users\asika\Downloads\ffmpeg-n5.0-latest-win64-lgpl-shared-5.0\ffmpeg-n5.0-latest-win64-lgpl-shared-5.0\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\asika\Downloads\ffmpeg-n5.0-latest-win64-lgpl-shared-5.0\ffmpeg-n5.0-latest-win64-lgpl-shared-5.0\lib;C:\Users\asika\AppData\Local\Programs\Python\Python38\libs;C:\Users\asika\Downloads\WindowsSDK20211223\WindowsSDK20211223\CameraSDKWindows\lib;$(LibraryPath)</LibraryPath>
-    <TargetExt>.pyd</TargetExt>
+    <IncludePath>C:\Users\asika\Downloads\WindowsSDK20211223\WindowsSDK20211223\MediaSDK20211223%28windows%29\MediaSDK\include;C:\Users\asika\AppData\Local\Programs\Python\Python38\include;C:\Users\asika\Downloads\WindowsSDK20211223\WindowsSDK20211223\CameraSDKWindows\include;C:\Users\asika\Downloads\ffmpeg-n5.0-latest-win64-lgpl-shared-5.0\ffmpeg-n5.0-latest-win64-lgpl-shared-5.0\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\asika\Downloads\WindowsSDK20211223\WindowsSDK20211223\MediaSDK20211223%28windows%29\MediaSDK\lib;C:\Users\asika\Downloads\ffmpeg-n5.0-latest-win64-lgpl-shared-5.0\ffmpeg-n5.0-latest-win64-lgpl-shared-5.0\lib;C:\Users\asika\AppData\Local\Programs\Python\Python38\libs;C:\Users\asika\Downloads\WindowsSDK20211223\WindowsSDK20211223\CameraSDKWindows\lib;$(LibraryPath)</LibraryPath>
+    <TargetExt>.exe</TargetExt>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release_pyd|x64'">
+    <LinkIncremental>false</LinkIncremental>
+    <ExecutablePath>C:\Users\asika\Downloads\WindowsSDK20211223\WindowsSDK20211223\CameraSDKWindows\bin;$(ExecutablePath)</ExecutablePath>
+    <IncludePath>C:\Users\asika\Downloads\WindowsSDK20211223\WindowsSDK20211223\MediaSDK20211223%28windows%29\MediaSDK\include;C:\Users\asika\AppData\Local\Programs\Python\Python38\include;C:\Users\asika\Downloads\WindowsSDK20211223\WindowsSDK20211223\CameraSDKWindows\include;C:\Users\asika\Downloads\ffmpeg-n5.0-latest-win64-lgpl-shared-5.0\ffmpeg-n5.0-latest-win64-lgpl-shared-5.0\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\asika\Downloads\WindowsSDK20211223\WindowsSDK20211223\MediaSDK20211223%28windows%29\MediaSDK\lib;C:\Users\asika\Downloads\ffmpeg-n5.0-latest-win64-lgpl-shared-5.0\ffmpeg-n5.0-latest-win64-lgpl-shared-5.0\lib;C:\Users\asika\AppData\Local\Programs\Python\Python38\libs;C:\Users\asika\Downloads\WindowsSDK20211223\WindowsSDK20211223\CameraSDKWindows\lib;$(LibraryPath)</LibraryPath>
+    <TargetExt>.exe</TargetExt>
   </PropertyGroup>
   <PropertyGroup Label="Vcpkg">
     <VcpkgEnabled>false</VcpkgEnabled>
@@ -103,6 +141,9 @@
   <PropertyGroup Label="Vcpkg" Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <VcpkgInstalledDir>
     </VcpkgInstalledDir>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release_pyd|x64'" Label="Vcpkg">
+    <VcpkgInstalledDir />
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -132,6 +173,22 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release_pyd|Win32'">
+    <ClCompile>
+      <WarningLevel>Level3</WarningLevel>
+      <FunctionLevelLinking>true</FunctionLevelLinking>
+      <IntrinsicFunctions>true</IntrinsicFunctions>
+      <SDLCheck>true</SDLCheck>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <ConformanceMode>true</ConformanceMode>
+    </ClCompile>
+    <Link>
+      <SubSystem>Console</SubSystem>
+      <EnableCOMDATFolding>true</EnableCOMDATFolding>
+      <OptimizeReferences>true</OptimizeReferences>
+      <GenerateDebugInformation>true</GenerateDebugInformation>
+    </Link>
+  </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -145,7 +202,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>CameraSDK.lib;avcodec.lib;avdevice.lib;avfilter.lib;avformat.lib;avutil.lib;swresample.lib;swscale.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>MediaSDK.lib;CameraSDK.lib;avcodec.lib;avdevice.lib;avfilter.lib;avformat.lib;avutil.lib;swresample.lib;swscale.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -165,7 +222,27 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>CameraSDK.lib;avcodec.lib;avdevice.lib;avfilter.lib;avformat.lib;avutil.lib;swresample.lib;swscale.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>MediaSDK.lib;CameraSDK.lib;avcodec.lib;avdevice.lib;avfilter.lib;avformat.lib;avutil.lib;swresample.lib;swscale.lib;%(AdditionalDependencies)</AdditionalDependencies>
+    </Link>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release_pyd|x64'">
+    <ClCompile>
+      <WarningLevel>Level3</WarningLevel>
+      <FunctionLevelLinking>true</FunctionLevelLinking>
+      <IntrinsicFunctions>true</IntrinsicFunctions>
+      <SDLCheck>true</SDLCheck>
+      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp20</LanguageStandard>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
+      <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
+    </ClCompile>
+    <Link>
+      <SubSystem>Console</SubSystem>
+      <EnableCOMDATFolding>true</EnableCOMDATFolding>
+      <OptimizeReferences>true</OptimizeReferences>
+      <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>MediaSDK.lib;CameraSDK.lib;avcodec.lib;avdevice.lib;avfilter.lib;avformat.lib;avutil.lib;swresample.lib;swscale.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
